Fixed small bugs

--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -11,7 +11,6 @@
   publisher={New Riders}, 
   author={Adams, Ernest W. and Dormans, Joris}, 
   year={2012},
-  page={60}
  } 
  @book{book:gamedesign:economy, 
   place={Berkeley, CA}, 
@@ -518,4 +517,9 @@ doi = {10.13140/RG.2.2.35431.34724}
   title={IGDB Entry von Warcraft III},
   url={https://www.igdb.com/games/warcraft-iii-reign-of-chaos},
   urldate={2022-09-24}
+}
+@online{aaron0zabel,
+  title={ARTSTATION Portfolio von Aaron Zabel},
+  url={https://aaron0zabel.artstation.com/},
+  urldate={2022-09-26}
 }
