--- a/3.definition/3.0.definition.tex
+++ b/3.definition/3.0.definition.tex
@@ -3,11 +3,11 @@ Um die Kategorie der Ressource Management Games zu definieren, ist es essenziell
 Im Zentrum dieser Kategorie stehen also die \textit{Ressourcen}, das \textit{Verwalten} dieser Ressourcen innerhalb einer \textit{Ökonomie}, und der zu einem gegebenen Zeitpunkt vorhandene \textit{Informationsgehalt} des Spielers.
 
 \subsection{Ressourcen}
-Der erste fundamentale Bestandteil sind die \textit{Ressourcen}. Als Stützpfeiler von Ökonomien kann jegliches Konzept, was numerisch erfasst und gemessen werden kann als Ressource gelten. Speziell auf Spiele bezogen gibt es also etliche Möglichkeiten eine Ressource zu etablieren. So sind Geld, Energie oder eigene Einheiten verschiedene Ressourcen, aber nach genannter Definition auch gegnerische Einheiten, Zeit und Geschwindigkeit. Statische und nicht interaktive Objekte oder Gebäude hingegen sind keine Ressourcen \cite*[]{book:gamedesign:resources}. Es ist jedoch keine \textit{Kontrollierbarkeit} gefordert, so ist \textit{Zeit} auch eine Ressource, auch wenn diese nie mehr werden kann und vom Menschen nicht beeinflussbar ist.
+Der erste fundamentale Bestandteil sind die \textit{Ressourcen}. Als Stützpfeiler von Ökonomien kann jegliches Konzept, was numerisch erfasst und gemessen werden kann als Ressource gelten. Speziell auf Spiele bezogen gibt es also etliche Möglichkeiten eine Ressource zu etablieren. So sind Geld, Energie oder eigene Einheiten verschiedene Ressourcen, aber nach genannter Definition auch gegnerische Einheiten, Zeit und Geschwindigkeit. Statische und nicht interaktive Objekte oder Gebäude hingegen sind keine Ressourcen \cite*[S.60]{book:gamedesign:resources}. Es ist jedoch keine \textit{Kontrollierbarkeit} gefordert, so ist \textit{Zeit} auch eine Ressource, auch wenn diese nie mehr werden kann und vom Menschen nicht beeinflussbar ist.
 
 Eine Ressource gilt als \textit{greifbar} (engl. \textit{tangible}), wenn diese Ressource in der physischen oder virtuellen Welt tatsächlich existiert und wahrgenommen werden kann. Die Ressource besitzt also eine eindeutige Koordinate im Raum. Beispielhaft dafür wären wiederum Einheiten, Bäume oder Eisenminen. Im Gegensatz dazu stehen \textit{nicht greifbare} (engl. \textit{intangible}) Ressourcen. Darunter fallen alle Ressourcen, die keine Koordinate im physischen oder virtuellen Raum haben. Lebenspunkte einer Einheit sind beispielsweise keine greifbare Ressource. 
 
-Diese beiden Gegensätze können in Wechselwirkung stehen, so kann ein vom Spieler eingesammelter Gegenstand (greifbar) dazu führen, dass sich die Lebenspunkte erhöhen (nicht greifbar), wodurch der eingesammelte Gegenstand aus dem Raum verschwindet. Dadurch entsteht eine Art Transition von einer greifbaren zu einer ungreifbaren Ressource \cite*[]{book:gamedesign:resources}. 
+Diese beiden Gegensätze können in Wechselwirkung stehen, so kann ein vom Spieler eingesammelter Gegenstand (greifbar) dazu führen, dass sich die Lebenspunkte erhöhen (nicht greifbar), wodurch der eingesammelte Gegenstand aus dem Raum verschwindet. Dadurch entsteht eine Art Transition von einer greifbaren zu einer ungreifbaren Ressource \cite*[S.60]{book:gamedesign:resources}. 
 
 Ressourcen können weiterhin gruppiert werden in \textit{konkret} (engl. \textit{concrete}) oder \textit{abstrakt} (engl. \textit{abstract}). Konkrete Ressourcen sind dabei jegliche Form von Ressourcen, welche der Spieler tatsächlich als diese wahrnimmt, also etwa Holz, Lebenspunkte oder Bäume. Abstrakte Ressourcen hingegen werden nicht vom Spieler als solche erkannt und nicht gezeigt, sondern für Hintergrundberechnungen verwendet. Ein klassisches Beispiel einer solchen Ressource ist der Wert der einzelnen Spielsteine beim Schach. Ein Bauer hat einen numerischen Wert von \textit{1}, die Königin hingegen einen Wert von \textit{9}. Der König hat als einziger Spielstein keinen Wert, da mit dessen Fall das Spiel endet \cite*[]{chesspieces}. Diese Werte werden im Spiel nicht thematisiert und auch nicht in dessen Konzept eingebunden, sondern existieren einzig für den Zweck der Wertebestimmung eines Spielers.
 
