--- a/6.prototype/6.7.mechaniken.tex
+++ b/6.prototype/6.7.mechaniken.tex
@@ -243,7 +243,7 @@ Es gibt, analog zu den Aktionen, 6 verschiedene, baubare Strukturen. Diese diene
 \end{figure}
 
 \subsubsection{Brutvorgang}
-Um neue Bienen herzustellen werden, wie bereits zuvor erläutert und in \autoref{image:reproductionloop} erkennbar, verschiedene Bienen für verschiedene Resultate benötigt. Wird ein Ei in eine Brutkammer gelegt, beginnt ab diesem Zeitpunkt die Metamorphose, analog zu den in \textit{Sektion 5.1.4 Metamorphose} erläuterten Vorgängen. Das gelegte Ei wird nach einer gegebenen Zeit zu einer Larve, danach zu einer Puppe und anschließend zu einer voll ausgewachsenen Biene. Die Modelle einer einzelnen Einheit sind in \autoref{image:metamorphosisimplemented} zu erkennen.
+Um neue Bienen herzustellen werden, wie bereits zuvor erläutert und in \autoref{image:reproductionloop} erkennbar, verschiedene Bienen für verschiedene Resultate benötigt. Wird ein Ei in eine Brutkammer gelegt, beginnt ab diesem Zeitpunkt die Metamorphose, analog zu den in \textit{Sektion 5.1.4 Metamorphose} erläuterten Vorgängen. Das gelegte Ei wird nach einer gegebenen Zeit zu einer Larve, danach zu einer Puppe und anschließend zu einer voll ausgewachsenen Biene. Die Modelle einer einzelnen Einheit sind in \autoref{image:metamorphosisimplemented} zu erkennen. Die Modelle der Bienen, wie auch der verschiedenen Stadien der Metamorphose wurden von \textit{Aaron Zabel} \cite*[]{aaron0zabel} mit der Software \textit{Blender} entworfen.
 
 \paragraph{Stadium 1: Ei} Das Ei liegt nach dem Legen in der Brutwabe. Zu diesem Stadium ist lediglich erkennbar, ob befruchtet oder unbefruchtet. Die Wabe muss ein Mal mit Nahrung, vorzugsweise Nektar oder Honig, gefüllt werden, damit das Ei überlebt. Nach einigen Tagen schlüpft daraus eine Larve und die Nahrung in der Brutwabe ist verbraucht.
 
